--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "phonebook-client",
-  "homepage": "https://hicarlodacuyan.github.io/phonebook-client/",
+  "homepage": "https://thebenjieangeles.github.io/phonebook-client/",
   "private": true,
   "version": "0.0.0",
   "type": "module",
